welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: not found: value <
      case speed < 66 => return 0
                 ^caughtSpeeding:5: error: not found: value &&
      case speed > 66 && speed < 86 => return 1
                      ^caughtSpeeding:5: error: not found: value >
      case speed > 66 && speed < 86 => return 1
                 ^caughtSpeeding:5: error: not found: value <
      case speed > 66 && speed < 86 => return 1
                               ^caughtSpeeding:5: error: speed is already defined as value speed
      case speed > 66 && speed < 86 => return 1
                         ^caughtSpeeding:6: error: not found: value >
      case speed > 85 => return 2
                 ^caughtSpeeding:9: error: not found: value <
    case speed < 61 => return 0
               ^caughtSpeeding:10: error: not found: value &&
    case speed > 60 && speed < 81 => return 1
                    ^caughtSpeeding:10: error: not found: value >
    case speed > 60 && speed < 81 => return 1
               ^caughtSpeeding:10: error: not found: value <
    case speed > 60 && speed < 81 => return 1
                             ^caughtSpeeding:10: error: speed is already defined as value speed
    case speed > 60 && speed < 81 => return 1
                       ^caughtSpeeding:11: error: not found: value >
    case speed > 80 => return 2
               ^